Refactor API endpoint "/api/todos" to include status query param instead of includeAll param
